welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:2: error: ';' expected but symbol literal found.
	if ( tea<=5 || candy<=5 ) { 'outcome'==0 }
                                            ^