welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
	if ( tea<=5 || candy<=5 ) { 'outcome'==0 }
	
     else if ( tea<=5 && candy<=5 ) { outcome==1 }
     
	else  { outcome==2 }
}


